ios.pm: collect show activation-key on ASA - suggested by Bob Brunette
eg: output that bob provided.

firewall# show activation-key
Serial Number:  FCHxxxxxxxx
Running Permanent Activation Key: 0xnnnnnnnn 0xnnnnnnnn 0xnnnnnnnn
0xnnnnnnnn 0xnnnnnnnn
Running Timebased Activation Key: 0xnnnnnnnn 0xnnnnnnnn 0xnnnnnnnn
0xnnnnnnnn 0xnnnnnnnn

Licensed features for this platform:
Maximum Physical Interfaces       : Unlimited      perpetual
Maximum VLANs                     : 300            perpetual
Inside Hosts                      : Unlimited      perpetual
Failover                          : Active/Active  perpetual
Encryption-DES                    : Enabled        perpetual
Encryption-3DES-AES               : Enabled        perpetual
Security Contexts                 : 7              3 days
GTP/GPRS                          : Disabled       perpetual
AnyConnect Premium Peers          : 2500           3 days
AnyConnect Essentials             : 2500           perpetual
Other VPN Peers                   : 2500           perpetual
Total VPN Peers                   : 2500           perpetual
Shared License                    : Disabled       perpetual
AnyConnect for Mobile             : Enabled        perpetual
AnyConnect for Cisco VPN Phone    : Enabled        3 days
Advanced Endpoint Assessment      : Disabled       perpetual
UC Phone Proxy Sessions           : 52             3 days
Total UC Proxy Sessions           : 52             3 days
Botnet Traffic Filter             : Disabled       perpetual
Intercompany Media Engine         : Disabled       perpetual
IPS Module                        : Enabled        perpetual
Cluster                           : Enabled        perpetual
Cluster Members                   : 2              perpetual

This platform has an ASA5545 VPN Premium license.


Failover cluster licensed features for this platform:
Maximum Physical Interfaces       : Unlimited      perpetual
Maximum VLANs                     : 300            perpetual
Inside 

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2.99
+	ios.pm: collect show activation-key on ASA - suggested by Bob Brunette
+
 	control_rancid: track number of invocations per-group in untracked file
 	runcount; after 100, perform extra-cleanup.  Currently only applies to
 	git repos.
