--- a/rancid/man/par.1
+++ b/rancid/man/par.1
@@ -31,6 +31,9 @@ the braces ({}s) in the
 .B \-c
 argument.
 .PP
+The input file may also be specified on stdin, in the format as previously
+described.
+.PP
 In each of the cases where the lines of the file, following the first, are
 not commands (ie: colon or -c), instances of open-close braces ({}) in the
 command will be replaced by these values.
