--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,3 +1,6 @@
+3.3.99
+	a10 load balancer support - Robert Minsk
+
 3.3
 	par: fix quote handling in spliting input file lines.  Also clean-up
 	some error messages.
