--- a/rancid/man/clogin.1
+++ b/rancid/man/clogin.1
@@ -55,6 +55,7 @@ script to automate the process of logging into a Cisco router,
 Catalyst switch, Extreme switch, Juniper ERX/E-series, Procket Networks,
 or Redback router.
 There are complementary scripts for
+A10,
 Alteon,
 Avocent (Cyclades),
 Bay Networks (nortel),
@@ -72,6 +73,7 @@ Netopia,
 Cisco WLCs
 and Xirrus arrays,
 named
+.B a10login
 .B alogin,
 .B avologin,
 .B blogin,
