iosxr.pm: add errmsg_cont to filtered flash files - xr 5.3.1 debugging turd?

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.5
+	iosxr.pm: add errmsg_cont to filtered flash files - xr 5.3.1 debugging
+	turd?
+
 	configure: fix error in filtering '.' from ENV_PATH and filter [\r\n].
 
 3.4
