--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,9 @@
-3.5
+3.4.99
+	foundry.pm: add 'show media' and 'show media validation', tested on
+	Brocade ICX 6650 and Brocade CER 2024, but not available on pre-8
+	firmware - Chris Wopat
+
+3.4.1
 	iosxr.pm: add errmsg_cont to filtered flash files - xr 5.3.1 debugging
 	turd?
 
