--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	rancid-cvs: do not set git config --global, local only
+
 	flogin: build with login_top
 
 	foundry.pm: add 'show media' and 'show media validation', tested on
