--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	ios.pm: trim trailing WS is show license, formatting problem on old ASAs
+
 	plogin: wrong variable used in error msg - randy bush
 
 	control_rancid: test -e -> -f for old shells
