--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 3.4.99
+	ios.pm: strip license period from 2900
+
+	ios.pm: show license is an incomplete cmd on older XE images
+
 	ios.pm: trim trailing WS is show activation key, formatting problem on
 	old ASAs
 
