--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	rancid-cvs: initialize .git/description
+
 	iosxr.pm: ASR show version chassis line changed - tip top work cisco
 
 	ios.pm: strip license period from 2900
