--- a/rancid/man/rancid.1
+++ b/rancid/man/rancid.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid" "1" "15 January 2016"
+.TH "rancid" "1" "7 March 2016"
 .SH NAME
 rancid \- Cisco configuration filter
 .SH SYNOPSIS
@@ -81,7 +81,8 @@ Fortinet Firewalls
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices, Arbor
 Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR, Cisco
-NX-OS, Cisco WLC, Dell switches, Compass EOS, and Juniper JUNOS.
+NX-OS, Cisco WLC, Dell switches, Foundry (aka Brocade) devices, Compass EOS,
+Juniper JUNOS, and UBNT Edgemax.
 It uses the device O/S modules for parsing routines.
 See
 .BR rancid (3)
