configure: fix mktemp variable inconsistency - Lee

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	configure: fix mktemp variable inconsistency - Lee
+
 	edgemax.pm: https://www.ubnt.com/edgemax/
 
 	flogin: merge ssh key code from jlogin
