iosxr.pm: fail on temp error in admin show install eg: - ! The inventory summary cannot be output when the profiles are different. The profiles may be different if querying over the start or end of an install operat ion. - ! Suggested steps: - !  - re-run the query. + ! Default Profile: + !   SDRs: 	...

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	iosxr.pm: fail on temp error in admin show install
+
 	configure: fix mktemp variable inconsistency - Lee
 
 	edgemax.pm: https://www.ubnt.com/edgemax/
