--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "15 January 2016"
+.TH "router.db" "5" "24 March 2016"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -190,7 +190,7 @@ A Riverstone NAS or Cabletron (starting with version ~9.0.3) router.
 .TP
 .ID 15n
 .B smc
-A SMC switch (some Dell OEMs).
+A SMC switch, which account for some Dell OEMs.
 .TP
 .ID 15n
 .B ciscowlc
