additional notes about dell models as type smc

--- a/man/router.db.5
+++ b/man/router.db.5
@@ -190,7 +190,8 @@ A Riverstone NAS or Cabletron (starting with version ~9.0.3) router.
 .TP
 .ID 15n
 .B smc
-A SMC switch, which account for some Dell OEMs.
+A SMC switch, which also account for some Dell OEMs.
+Including Dell PowerConnect 35xx (3524, 3524P, 3548, 3548P).
 .TP
 .ID 15n
 .B ciscowlc
