--- a/rancid/man/rancid.1
+++ b/rancid/man/rancid.1
@@ -81,8 +81,8 @@ Fortinet Firewalls
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices, Arbor
 Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR, Cisco
-NX-OS, Cisco WLC, Dell switches, Foundry (aka Brocade) devices, Compass EOS,
-Juniper JUNOS, and UBNT Edgemax.
+NX-OS, Cisco WLC, (some) Dell switches, Foundry (aka Brocade) devices,
+Compass EOS, Juniper JUNOS, and UBNT Edgemax.
 It uses the device O/S modules for parsing routines.
 See
 .BR rancid (3)
