ios.pm: correct debug log msg - Reuben Farrelly

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	ios.pm: correct debug log msg - Reuben Farrelly
+
 	iosxr.pm: ShowInstallSummary() return error if active install operation
 
 	iosxr.pm: filter perpetually changing file aaa
