ios.pm: filter/sort new ipv4/6 access-list format where list names are omitted from rule lines.  like:
ipv4 access-list name
 remark NTP
 deny ipv4 host 224.0.1.1 any
 deny ipv4 239.0.0.0 0.255.255.255 any
 permit udp any eq 123 any
 permit ipv4 nnn.nnn.nnn.nnn/nn any
 permit nnn.nnn.nnn.nnn/nn

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.4.99
+	ios.pm: filter/sort new ipv4/6 access-list format where list names are
+	omitted from rule lines.
+
 	ios.pm: correct debug log msg - Reuben Farrelly
 
 	iosxr.pm: ShowInstallSummary() return error if active install operation
