--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.4.99
+	ios.pm: filter/sort new ipv4/6 access-list format where list names are
+	omitted from rule lines.
+
 	ios.pm: correct debug log msg - Reuben Farrelly
 
 	iosxr.pm: ShowInstallSummary() return error if active install operation
