--- a/man/router.db.5
+++ b/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "24 March 2016"
+.TH "router.db" "5" "3 April 2016"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -69,6 +69,10 @@ An Avocent Cyclades console server.
 .ID 15n
 .B baynet
 A Bay Networks router.
+.TP
+.ID 15n
+.B bigip
+A F5 device running BIG-IP >= v11.
 .TP
 .ID 15n
 .B cat5
