--- a/man/rancid.1
+++ b/man/rancid.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid" "1" "7 March 2016"
+.TH "rancid" "1" "4 April 2016"
 .SH NAME
 rancid \- Cisco configuration filter
 .SH SYNOPSIS
@@ -82,7 +82,7 @@ Fortinet Firewalls
 The generic rancid script; supporting Allied Telesis AW+ devices, Arbor
 Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR, Cisco
 NX-OS, Cisco WLC, (some) Dell switches, Foundry (aka Brocade) devices,
-Compass EOS, Juniper JUNOS, and UBNT Edgemax.
+Compass EOS, Juniper JUNOS, and UBNT Edgemax and EdgeRouter.
 It uses the device O/S modules for parsing routines.
 See
 .BR rancid (3)
