ios.pm: filter license broker BS

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	ios.pm: filter license broker BS
+
 	FAQ: add notes about openssh client changes for logjam
 
 	hpuifilter: fix handling of buffer when it drains
