--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "3 April 2016"
+.TH "router.db" "5" "9 May 2016"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -97,8 +97,12 @@ A Cisco Nexus switch/router.
 A Cisco device running IOS-XR.
 .TP
 .ID 15n
-.B cisco-wlc
-A Cisco Wireless Controller.
+.B cisco-wlc4
+A Cisco Wireless Controller versions up to 4.
+.TP
+.ID 15n
+.B cisco-wlc5
+A Cisco Wireless Controller versions 5 and above.
 .TP
 .ID 15n
 .B css
