--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	nxos.pm: fix PS wattage filtering - Kyle Wilson
+
 	junos.pm: filter benign subsystem warnings
 
 	ios.pm: filter license broker BS
