--- a/man/rancid.1
+++ b/man/rancid.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid" "1" "4 April 2016"
+.TH "rancid" "1" "24 May 2016"
 .SH NAME
 rancid \- Cisco configuration filter
 .SH SYNOPSIS
@@ -81,10 +81,13 @@ Fortinet Firewalls
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices, Arbor
 Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR, Cisco
-NX-OS, Cisco WLC, (some) Dell switches, Foundry (aka Brocade) devices,
-Compass EOS, Juniper JUNOS, and UBNT Edgemax and EdgeRouter.
-It uses the device O/S modules for parsing routines.
-See
+NX-OS, Cisco WLC, (some) Dell switches, Extreme switches, Foundry (aka
+some Brocade) devices, Compass EOS, Juniper JUNOS, and UBNT Edgemax and
+EdgeRouter.
+It uses the device O/S modules for parsing routines as determined by the
+.BR rancid.types.conf (5)
+file(s).
+Also see
 .BR rancid (3)
 for details.
 .TP
@@ -126,9 +129,6 @@ Netopia sDSL/T1 routers
 .TP
 .B xirancid
 Xirrus arrays
-.TP
-.B xrancid
-Extreme switches
 .TP
 .B zrancid
 Zebra routing software
