--- a/man/clogin.1
+++ b/man/clogin.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "clogin" "1" "3 June 2015"
+.TH "clogin" "1" "26 May 2016"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -70,7 +70,8 @@ Netscreen firewalls,
 Netscaler,
 Riverstone,
 Netopia,
-Cisco WLCs
+Cisco WLCs,
+Extreme devices
 and Xirrus arrays,
 named
 .B a10login
@@ -90,6 +91,7 @@ named
 .B rivlogin,
 .B tlogin,
 .B wlogin,
+.B xlogin,
 and
 .B xilogin,
 respectively.
