--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	iosxr.pm: fix handling of comments in access-lists
+
 	nxos.pm: sort ip{v6} access-lists & filter sequence numbers
 
 	foundry.pm: summarize flash free space
