--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "9 May 2016"
+.TH "router.db" "5" "14 June 2016"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -171,6 +171,10 @@ A Mikrotik router.
 .TP
 .B mrtd
 A host running the (Merit) MRTd daemon.
+.TP
+.B mrv
+A MRV optical device; including NC316, OptiSwitch 904, OptiSwitch 906G,
+OptiSwitch 912C, OptiSwitch 940.
 .TP
 .ID 15n
 .B netscalar
