--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	ios.pm: filter ios-xe requested time from show inventory feature
+
 	iosxr.pm: differences in NCS6k show inventory
 
 	nxos.pm: show env temp does not exist on 1000v
