--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	edgerouter.pm: initial module for Ubiquity Edgerouter, WiP
+
 	hlogin: when refactoring prompt, eat full lines before looking for the
 	prompt
 
