--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.4.99
+	ciscowlc.pm: some older code fails to echo <CR> after logout - Bill
+	Fenner
+
 	edgerouter.pm: initial module for Ubiquity Edgerouter, WiP
 
 	hlogin: when refactoring prompt, eat full lines before looking for the
