ciscowlc.pm: filter rogue client config that are added/removed automatically - Reuben Farrelly
"With the new release of Cisco Wireless LAN Controller code version 8.3 a few
days ago, there are a few tweaks we need to make to filter out needless output  
from ciscowlc.pm:
 
1. Every hour we see these:
 
-  rogue client alert 28:18:78:56:36:f3
-  rogue client alert 4c:66:41:0a:16:03
+  rogue client alert 0c:d7:46:5f:f0:42
+  rogue client alert 28:5a:eb:a6:71:0b
"

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.4.99
+	ciscowlc.pm: filter rogue client config that are added/removed
+	automatically - Reuben Farrelly
+
 	fnlogin: fix pager disabling for newer o/s - Romanens Xavier, Michael
 	Newton confirms working for older 4.x o/s
 
