--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	ciscowlc.pm: filter OUI classification failures - Reuben Farrelly
+
 	ciscowlc.pm: filter rogue client config that are added/removed
 	automatically - Reuben Farrelly
 
