aeos.pm: handle returning from a function with a prompt in $_

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.4.99
+	aeos.pm: handle returning from a function with a prompt in $_
+
 	rancid-cvs, rancid-run, rancid.conf: use LOGDIR from rancid.conf, set a
 	default, and makes manpage notes - David Jones
 
