--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.5.99
+	iosxr.pm: More useless FPD messages
+
 	junos.pm: handle a transient cmd protocol failure seen in show version
 
 	control_rancid: use git ls-files instead of git status for .gitignore
