--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.5.99
+	ios.pm: evaluation license periods are displayed differently
+
 	lg: Add show interface optics 
 
 	iosxr.pm: More useless FPD messages
